--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.6.0",
+    "react-burger-menu": "^2.5.4",
     "react-dom": "^16.6.0",
     "react-scripts": "2.1.0"
   },
