--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "bower": "^1.8.4",
     "react": "^16.6.0",
     "react-burger-menu": "^2.5.4",
     "react-dom": "^16.6.0",
