--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.6.0",
     "react-burger-menu": "^2.5.4",
     "react-dom": "^16.6.0",
+    "react-google-maps": "^9.4.5",
     "react-scripts": "2.1.0"
   },
   "scripts": {
